basic outline for the data model part

--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -533,6 +533,33 @@ In light of the code changes and their effect on the overall performance, we can
 \newpage
 \section{Streamlining the computation's data model}
 
+\subsection{The existing data model}
+
+\subsection{Connection of the data model and the algorithms}
+
+\subsection{Issues with the existing model}
+
+\subsubsection{Memory allocations}
+
+\subsubsection{Expensive copies}
+
+\subsubsection{Inefficient memory access patterns}
+
+\subsubsection{Cannot be vectorized}
+
+
+\subsection{Proposed model}
+
+i can probably explain what i made a merge request for...
+
+\subsection{Results}
+
+i can present the result of my merge request
+
+\subsection{Future work}
+
+i can explain what was actually implemented which is pretty much what i wanted later
+
 
 %----------------------------------------------------------------------------
 % === VELOUT OPT ===
